--- a/assets/templates/home.hbs
+++ b/assets/templates/home.hbs
@@ -2,15 +2,36 @@
 
 <h2>Welcome to imagebucket</h2>
 
+{{#if authenticated}}
+    Welcome back, {{username}}. <a href="/auth/logout">Log out</a>
+{{else}}
+    Please <a href="/auth/login">log in</a> 
+    {{#unless private}}
+        or <a href="/auth/register">register</a>
+    {{/unless}}.
+{{/if}}
+
 <article>
 
-<ul>
-    {{#each files}}
-        <li>
-            {{this.ID}} - {{this.Filename}} - {{this.OriginalFilename}}
-        </li>
-    {{/each}}
-</ul>
+{{#if authenticated}}
+
+    Upload a file:
+    <form action="/files/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="file" id="file">
+        <button type="submit">Upload</button>
+    </form>
+
+    <br>
+
+    Last 10 files uploaded:
+    <ul>
+        {{#each files}}
+            <li>
+                <a href="/{{this.Filename}}">{{this.ID}} - {{this.Filename}} - {{this.OriginalFilename}}</a>
+            </li>
+        {{/each}}
+    </ul>
+{{/if}}
 
 </article>
 
